0.3:
 - Fixed building with dev-cpp, and include Windows sources in dist

0.2:
 - Renamed executables(u3_tool -> u3-tool)
 - Added Info command
 - Don't ask password for disable security
 - Print size's in human readable format
 - Fixed printing of large device size
 - Warn if user is about to block device
 - Handle blocked device better
 - Make sg subsystem the default
 - Change build system to autoconf/automake

0.1:
 - Initial version