@@ -16,6 +16,11 @@
  * with this program; if not, write to the Free Software Foundation, Inc.,
  * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */ 
+#if HAVE_CONFIG_H
+# include "config.h"
+#endif
+
+#ifdef SUBSYS_SG
 #include "u3_scsi.h"
 #include "u3_error.h"
 
@@ -34,6 +39,9 @@
 #include "sg_err.h"
 
 #define U3_TIMEOUT 2000	//2000 millisecs == 2 seconds 
+
+const char *u3_subsystem_name = "sg";
+const char *u3_subsystem_help = "'/dev/sda0', '/dev/sg3'";
 
 int u3_open(u3_handle_t *device, const char *which) 
 {
@@ -162,4 +170,4 @@ int u3_send_cmd(u3_handle_t *device, uint8_t cmd[U3_CMD_LEN],
 	return U3_SUCCESS;
 }
 
-
+#endif //SUBSYS_SG
